@@ -1,5 +1,17 @@
 ChangeLog finally started 08 February 2006
 
+20 June     2006
+	Added VariantP.hs -- polymorphic variants as dual of records.
+	The extenbsibility problem solved? We can re-use as much as old
+	code as possible, when extending the variant and extending
+	the functions to the extended variant (and get the subtyping for
+	free).
+	
+	
+19 June     2006
+	Added RecordP.hs -- records with unzipped and fully phantom
+	labels. Added tests as well.
+	
 08 May      2006
 	MainPatternMatch.hs -- example of pattern-matching on HList's
 	Records
